# app-distributed-cloud

./: .gitreview  .zuul.yaml  HACKING.rst  README.md  debian_iso_image.inc  debian_pkg_dirs  debian_stable_docker_images.inc  test-requirements.txt  tox.ini
python3-k8sapp-distributed-cloud/debian/: meta_data.yaml
python3-k8sapp-distributed-cloud/debian/deb_folder/: changelog  control  copyright  rules
python3-k8sapp-distributed-cloud/k8sapp_distributed_cloud/: .stestr.conf  README.rst  pylint.rc  setup.cfg  setup.py  test-requirements.txt  tox.ini
python3-k8sapp-distributed-cloud/k8sapp_distributed_cloud/k8sapp_distributed_cloud/common/: constants.py
python3-k8sapp-distributed-cloud/k8sapp_distributed_cloud/k8sapp_distributed_cloud/helm/: base.py  dc_ingress_nginx.py  dcagent.py  dcmanager.py  dcorch.py
python3-k8sapp-distributed-cloud/k8sapp_distributed_cloud/k8sapp_distributed_cloud/lifecycle/: lifecycle_distributed_cloud.py
python3-k8sapp-distributed-cloud/k8sapp_distributed_cloud/k8sapp_distributed_cloud/tests/: test_distributed_cloud.py  test_plugins.py
stx-distributed-cloud-helm/debian/: meta_data.yaml
stx-distributed-cloud-helm/debian/deb_folder/: changelog  control  copyright  rules
stx-distributed-cloud-helm/stx-distributed-cloud-helm/files/: metadata.yaml
stx-distributed-cloud-helm/stx-distributed-cloud-helm/fluxcd-manifests/: kustomization.yaml
stx-distributed-cloud-helm/stx-distributed-cloud-helm/helm-charts/: Makefile  (+1 more)
stx-distributed-cloud-images/debian/: stx-distributed-cloud.dev_docker_image  stx-distributed-cloud.stable_docker_image
(+56 files in other folders)
