[metadata]
name = k8sapp-distributed-cloud
summary = StarlingX sysinv extensions for Distributed Cloud
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://www.starlingx.io/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[files]
packages =
    k8sapp_distributed_cloud

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
systemconfig.helm_applications =
    distributed-cloud = systemconfig.helm_plugins.distributed_cloud

systemconfig.helm_plugins.distributed_cloud =
    001_dcmanager = k8sapp_distributed_cloud.helm.dcmanager:DCManagerHelm
    002_dcorch = k8sapp_distributed_cloud.helm.dcorch:DCOrchHelm

systemconfig.app_lifecycle =
    distributed-cloud = k8sapp_distributed_cloud.lifecycle.lifecycle_distributed_cloud:DistributedCloudAppLifecycleOperator

[bdist_wheel]
universal = 1
